@@ -225,6 +225,8 @@ $_lang['articles.setting.notifyTwitterConsumerKeySecret'] = 'Secret Twitter Cons
 $_lang['articles.setting.notifyTwitterConsumerKeySecret_desc'] = 'Optional. The Secret Access Token for your Twitter that maps to the Twitter app used for authentication. If not set, will use the MODX-Articles default. Override with your own Twitter App Consumer Key Secret for more security.';
 $_lang['articles.setting.notifyTwitterTpl'] = 'Twitter Template';
 $_lang['articles.setting.notifyTwitterTpl_desc'] = 'The template that the message to Twitter will be sent as.';
+$_lang['articles.setting.notifyTwitterTagLimit'] = 'Twitter Template';
+$_lang['articles.setting.notifyTwitterTagLimit_desc'] = 'The number of tags to be used when [[+hashtags]] is used in the tpl; this placeholder appends tags as hashtags to the Tweet.';
 $_lang['articles.setting.shorteningService'] = 'URL Shortener';
 $_lang['articles.setting.shorteningService_desc'] = 'The service to use for shortening URLs. Set to None to not shorten URLs.';
 
